Fix various block properties being incorrect
Fix loot tables not dropping correct results
Add `lit` property to oven blocks
Fix ovens being minable with axe items, should be pickaxe items
Fix block items using `item.` translation keys, should be `block.`