@@ -8,8 +8,11 @@ import dev.apexstudios.apexcore.lib.registree.Registree;
 import dev.apexstudios.fantasyfurniture.set.function.BlockFactory;
 import dev.apexstudios.fantasyfurniture.set.function.ItemFactory;
 import dev.apexstudios.fantasyfurniture.set.function.ProviderListener;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -25,16 +28,16 @@ import net.neoforged.neoforge.event.BlockEntityTypeAddBlocksEvent;
 import org.jetbrains.annotations.Nullable;
 
 abstract sealed class BlockTypeImpl<TBlock extends Block> implements BlockType<TBlock> {
-    private static final Set<BlockType<?>> REGISTRY = Sets.newLinkedHashSet();
+    protected static final Set<BlockType<?>> REGISTRY = Sets.newLinkedHashSet();
 
     private final String registryName;
-    private final Function<BlockBehaviour.Properties, BlockBehaviour.Properties> blockPropertiesModifier;
-    private final Supplier<BlockBehaviour.Properties> initialBlockProperties;
+    private final BiFunction<FurnitureSet, BlockBehaviour.Properties, BlockBehaviour.Properties> blockPropertiesModifier;
+    private final Function<FurnitureSet, BlockBehaviour.Properties> initialBlockProperties;
     protected BlockFactory<TBlock> blockFactory;
     @Nullable private final Supplier<? extends BlockEntityType<?>> blockEntityType;
     private final Map<ProviderType<?>, ProviderListener<?, TBlock>> providerListeners;
-    private final Consumer<TBlock> onRegister;
-    private final Consumer<TBlock> onRegisterEnqueued;
+    private final BiConsumer<FurnitureSet, TBlock> onRegister;
+    private final BiConsumer<FurnitureSet, TBlock> onRegisterEnqueued;
     final Set<BlockType<?>> required;
 
     private BlockTypeImpl(BlockTypeBuilderImpl<TBlock, ?> builder) {
@@ -43,14 +46,11 @@ abstract sealed class BlockTypeImpl<TBlock extends Block> implements BlockType<T
         initialBlockProperties = builder.initialBlockProperties;
         blockFactory = builder.blockFactory;
         blockEntityType = builder.blockEntityType;
-        providerListeners = Map.copyOf(builder.providerListeners);
+        providerListeners = Collections.unmodifiableMap(builder.providerListeners);
         onRegister = builder.onRegister;
         onRegisterEnqueued = builder.onRegisterEnqueued;
-        required = builder.required;
+        required = Sets.newLinkedHashSet(builder.required);
         required.forEach(blockType -> ((BlockTypeImpl<?>) blockType).required.add(this));
-
-        if(!REGISTRY.add(this))
-            throw new IllegalStateException("Duplicate BlockType registration: " + registryName);
     }
 
     @Override
@@ -59,15 +59,34 @@ abstract sealed class BlockTypeImpl<TBlock extends Block> implements BlockType<T
     }
 
     @Override
-    public BlockBehaviour.Properties blockProperties() {
-        return blockPropertiesModifier.apply(initialBlockProperties.get());
+    public BlockBehaviour.Properties blockProperties(FurnitureSet furnitureSet) {
+        return blockPropertiesModifier.apply(furnitureSet, initialBlockProperties.apply(furnitureSet));
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if(this == obj)
+            return true;
+        if(obj instanceof BlockType<?> other)
+            return registryName.equals(other.registryName());
+        return false;
+    }
+
+    @Override
+    public int hashCode() {
+        return registryName.hashCode();
+    }
+
+    @Override
+    public String toString() {
+        return "BlockType{" + registryName + '}';
     }
 
     @OverridingMethodsMustInvokeSuper
     protected void register(IEventBus modBus, FurnitureSet furnitureSet, Registree registree) {
-        registree.register(Registries.BLOCK, registryName, registryName -> blockFactory.create(furnitureSet, blockProperties().setId(ResourceKey.create(Registries.BLOCK, registryName))));
-        registree.listenFor(Registries.BLOCK, registryName, block -> onRegister.accept((TBlock) block));
-        modBus.addListener(FMLCommonSetupEvent.class, event -> event.enqueueWork(() -> onRegisterEnqueued.accept(furnitureSet.getOrThrow(this))));
+        registree.register(Registries.BLOCK, registryName, registryName -> blockFactory.create(furnitureSet, blockProperties(furnitureSet).setId(ResourceKey.create(Registries.BLOCK, registryName))));
+        registree.listenFor(Registries.BLOCK, registryName, block -> onRegister.accept(furnitureSet, (TBlock) block));
+        modBus.addListener(FMLCommonSetupEvent.class, event -> event.enqueueWork(() -> onRegisterEnqueued.accept(furnitureSet, furnitureSet.getOrThrow(this))));
 
         if(blockEntityType != null)
             modBus.addListener(BlockEntityTypeAddBlocksEvent.class, event -> event.modify(blockEntityType.get(), furnitureSet.getOrThrow(this)));
@@ -102,8 +121,8 @@ abstract sealed class BlockTypeImpl<TBlock extends Block> implements BlockType<T
     }
 
     public static final class WithItem<TBlock extends Block, TItem extends Item> extends BlockTypeImpl<TBlock> implements BlockType.WithItem<TBlock, TItem> {
-        private final Function<Item.Properties, Item.Properties> itemPropertiesModifier;
-        private final Supplier<Item.Properties> initialItemProperties;
+        private final BiFunction<FurnitureSet, Item.Properties, Item.Properties> itemPropertiesModifier;
+        private final Function<FurnitureSet, Item.Properties> initialItemProperties;
         private ItemFactory<TBlock, TItem> itemFactory;
 
         public WithItem(BlockTypeBuilderImpl.WithItem<TBlock, TItem> builder) {
@@ -115,8 +134,8 @@ abstract sealed class BlockTypeImpl<TBlock extends Block> implements BlockType<T
         }
 
         @Override
-        public Item.Properties itemProperties() {
-            return itemPropertiesModifier.apply(initialItemProperties.get());
+        public Item.Properties itemProperties(FurnitureSet furnitureSet) {
+            return itemPropertiesModifier.apply(furnitureSet, initialItemProperties.apply(furnitureSet));
         }
 
         @Override
@@ -139,7 +158,7 @@ abstract sealed class BlockTypeImpl<TBlock extends Block> implements BlockType<T
         @Override
         protected void register(IEventBus modBus, FurnitureSet furnitureSet, Registree registree) {
             super.register(modBus, furnitureSet, registree);
-            registree.register(Registries.ITEM, registryName(), registryName -> itemFactory.create(furnitureSet, furnitureSet.getOrThrow(this), itemProperties().useItemDescriptionPrefix().setId(ResourceKey.create(Registries.ITEM, registryName))));
+            registree.register(Registries.ITEM, registryName(), registryName -> itemFactory.create(furnitureSet, furnitureSet.getOrThrow(this), itemProperties(furnitureSet).useBlockDescriptionPrefix().setId(ResourceKey.create(Registries.ITEM, registryName))));
         }
     }
 }
